[gd_scene load_steps=21 format=3 uid="uid://bshnhdivl4acy"]

[ext_resource type="Script" path="res://scenes/objects/chest/chest.gd" id="1_1r1ea"]
[ext_resource type="Texture2D" uid="uid://dl5le8s46n6uq" path="res://assets/game/objects/chest.png" id="1_t2iqk"]
[ext_resource type="PackedScene" uid="uid://4s7odvueaa2" path="res://scenes/components/interactable_component.tscn" id="2_gfque"]
[ext_resource type="PackedScene" uid="uid://7ontxgmrj8fa" path="res://scenes/components/interactable_label_component.tscn" id="3_1ygj2"]
[ext_resource type="PackedScene" uid="uid://4kuh74phid0o" path="res://scenes/components/feed_component.tscn" id="4_i0s8c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_67i7x"]
atlas = ExtResource("1_t2iqk")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tblgw"]
atlas = ExtResource("1_t2iqk")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f74xg"]
atlas = ExtResource("1_t2iqk")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgkbo"]
atlas = ExtResource("1_t2iqk")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjfga"]
atlas = ExtResource("1_t2iqk")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7na4h"]
atlas = ExtResource("1_t2iqk")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdk22"]
atlas = ExtResource("1_t2iqk")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqrfu"]
atlas = ExtResource("1_t2iqk")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uip6v"]
atlas = ExtResource("1_t2iqk")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_74sb7"]
atlas = ExtResource("1_t2iqk")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucri6"]
atlas = ExtResource("1_t2iqk")
region = Rect2(192, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_pnak8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_67i7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tblgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f74xg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgkbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjfga")
}],
"loop": false,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7na4h")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdk22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqrfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uip6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74sb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucri6")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eskir"]
size = Vector2(16, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_a622q"]
radius = 21.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5llso"]
radius = 6.08276

[node name="Chest" type="StaticBody2D"]
y_sort_enabled = true
script = ExtResource("1_1r1ea")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_pnak8")
autoplay = "default"
offset = Vector2(0, -7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_eskir")

[node name="InteractableComponent" parent="." instance=ExtResource("2_gfque")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableComponent"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_a622q")
debug_color = Color(0.332765, 0.612165, 0.333864, 0.42)

[node name="InteractableLabelComponent" parent="." instance=ExtResource("3_1ygj2")]
visible = false
offset_left = -28.0
offset_top = -35.0
offset_right = -10.0
offset_bottom = -17.0

[node name="HarvestMarker" type="Marker2D" parent="."]
position = Vector2(0, -8)

[node name="RewardMarker" type="Marker2D" parent="."]
position = Vector2(15, 14)

[node name="FeedComponent" parent="." instance=ExtResource("4_i0s8c")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FeedComponent"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_5llso")
debug_color = Color(0.645513, 0.515802, 0.230287, 0.42)

[connection signal="interactable_activated" from="InteractableComponent" to="." method="_on_interactable_activated"]
[connection signal="interactable_deactivated" from="InteractableComponent" to="." method="_on_interactable_deactivated"]
